fix: a funcao de logica que pegar todas as reviews com nome agora funcional